--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,8 @@
 
 body {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-	'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-	sans-serif;
+	font-family: -apple-system, 'Helvetica Neue', 'Segoe UI', 'Roboto', 'Oxygen',
+	'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -17,5 +16,18 @@ code {
 }
 
 .App {
-	text-align: center;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+	opacity: 1;
+}
+
+.input {
+	@apply rounded;
+	display: block;
+	width: 100%;
+	min-height: 40px;
+	padding-left: 14px;
+	color: #000;
 }
